tests/samples/invalid/var_underscore.pn

fn main() -> i32
{
	var _ = 400;
	return: _
}
